Fix mobile spacing

--- a/components/Related/Related.scss
+++ b/components/Related/Related.scss
@@ -51,7 +51,8 @@
   display: flex;
   flex-flow: row nowrap;
   margin: 0 auto 1rem;
-  max-width: 500px;
+  max-width: 520px;
+  padding: 0 10px;
   transform: scale(1);
   transition: transform .5s;
   width: 100%;
